Change style btn

--- a/src/sass/blocks/products/products.sass
+++ b/src/sass/blocks/products/products.sass
@@ -42,7 +42,7 @@
         padding: 10px 15px
       &:hover, &:focus
         color: $accent
-        border-color: $accent
+        border-bottom-color: $accent
 
 .products-tabs
   .section-title
