--- a/src/sass/blocks/products/products.sass
+++ b/src/sass/blocks/products/products.sass
@@ -1,5 +1,8 @@
 .products
   z-index: 2
+  .container
+    > .section-head
+      margin-bottom: 100px
 
 .products-tabs-list
   margin: 0 -15px 60px
@@ -44,7 +47,16 @@
         color: $accent
         border-bottom-color: $accent
 
-.products-tabs
+
+.products-card
+  margin-bottom: 100px
+  +r(767)
+    margin-bottom: 50px
+  &:last-child
+    margin-bottom: 0
+  &:nth-child(2n)
+    .products-card__row
+      flex-direction: row-reverse
   .section-title
     position: relative
     display: inline-block
@@ -77,8 +89,10 @@
     +r(992)
       text-align: center
 
-.products-list
+.products-card-list
   margin-top: 60px
+  +r(767)
+    margin-top: 20px
   &__item
     position: relative
     z-index: 1
@@ -88,48 +102,6 @@
     background-color: #fff
     box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.1)
     border-radius: 5px
-    +trans
-    &::before
-      content: ''
-      position: absolute
-      top: 0
-      right: 0
-      bottom: 0
-      left: 0
-      z-index: -1
-      border-radius: inherit
-      background: linear-gradient(90.63deg, #282882 -19.6%, #019AB5 113.48%)
-      +trans
-      opacity: 0
-      +r(1024)
-        display: none
-    &:hover
-      z-index: 2
-      &::before
-        opacity: 1
-      .products-list
-        &__title, &__descr
-          color: #fff
-          +r(1024)
-            color: $accent
-        &__content
-          opacity: 1
-          visibility: visible
-  &__dots
-    position: absolute
-    top: 40px
-    right: 20px
-    +r(1024)
-      display: none
-    span
-      display: block
-      width: 4px
-      height: 4px
-      margin-bottom: 9px
-      border-radius: 50%
-      background-color: #C4C4C4
-      &:last-child
-        margin-bottom: 0
   &__title
     margin-bottom: 10px
     font-size: 18px
@@ -145,32 +117,9 @@
     p
       margin: 0
   &__content
-    position: absolute
-    left: 0
-    right: 0
-    top: 90%
-    z-index: 2
-    max-height: 300px
-    overflow-y: auto
-    padding: 20px 15px
-    background: #fff
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1)
-    border-radius: 0 10px 0 0
-    +trans
-    opacity: 0
-    visibility: hidden
+    margin-top: 20px
+    max-height: 290px
     +smooth-scroll
-    +r(1024)
-      position: static
-      bottom: auto
-      left: auto
-      width: auto
-      margin-top: 30px
-      padding: 0
-      box-shadow: none
-      border-radius: 0
-      opacity: 1
-      visibility: visible
     p
       margin: 0
       font-weight: 400
