--- a/src/sass/blocks/about/about.sass
+++ b/src/sass/blocks/about/about.sass
@@ -43,6 +43,7 @@
       margin-top: 25px
       +r(992)
         display: block
+        max-width: 350px
         margin: 25px auto 0
 
 .float-img
