--- a/src/sass/blocks/contact/contact.sass
+++ b/src/sass/blocks/contact/contact.sass
@@ -26,6 +26,7 @@
       margin-top: 25px
       +r(992)
         display: block
+        max-width: 350px
         margin: 25px auto 0
   &__right
     flex-grow: 1
@@ -33,7 +34,7 @@
     margin-bottom: 25px
     font-size: 21px
     font-weight: 400
-    color: $honey-flower
+    color: $dark
     +r(576)
       font-size: 18px
     &-label
@@ -42,14 +43,14 @@
       margin-bottom: 5px
       font-size: 16px
       font-weight: 400
-      color: #999
+      color: $main-color
       svg
         width: 14px
         height: 14px
-        fill: #999
+        fill: $main-color
         margin-right: 10px
     a
-      color: $honey-flower
+      color: $dark
       &:hover, &:focus
         color: $accent
   &__map
