--- a/src/sass/blocks/hero/hero.sass
+++ b/src/sass/blocks/hero/hero.sass
@@ -25,6 +25,10 @@
           display: none
     .btn
       margin-top: 30px
+      +r(767)
+        display: block
+        max-width: 350px
+        margin: 30px auto 0
   &__descr
     max-width: 970px
     margin: 0 auto
