--- a/src/sass/blocks/modal.sass
+++ b/src/sass/blocks/modal.sass
@@ -41,21 +41,17 @@
       outline: none
 
   h3
-    margin-bottom: 10px
+    margin-bottom: 15px
     text-transform: uppercase
     font-size: 18px
-    font-weight: 700
     text-align: center
-    color: #212121
   p
     font-size: 14px
     text-align: center
-  .form__btn
+  .btn
     width: 100%
-    padding-top: 15px
-    padding-bottom: 15px
-    font-size: 14px
-
+    min-height: 73px
+    padding: 10px 15px
   &__bottom
     text-align: center
 
